--- a/Semana-5-proyecto-formularios-biblioteca.csproj
+++ b/Semana-5-proyecto-formularios-biblioteca.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Editoriales.Designer.cs">
       <DependentUpon>Editoriales.cs</DependentUpon>
     </Compile>
+    <Compile Include="Libros Nuevos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Libros Nuevos.Designer.cs">
+      <DependentUpon>Libros Nuevos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Empleados.resx">
       <DependentUpon>Empleados.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Libros Nuevos.resx">
+      <DependentUpon>Libros Nuevos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
