--- a/Semana-5-proyecto-formularios-biblioteca.csproj
+++ b/Semana-5-proyecto-formularios-biblioteca.csproj
@@ -100,6 +100,12 @@
     <Compile Include="Proveedores.Designer.cs">
       <DependentUpon>Proveedores.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reservación.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reservación.Designer.cs">
+      <DependentUpon>Reservación.cs</DependentUpon>
+    </Compile>
     <Compile Include="Usufrecuentes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -140,6 +146,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Proveedores.resx">
       <DependentUpon>Proveedores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reservación.resx">
+      <DependentUpon>Reservación.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Usufrecuentes.resx">
       <DependentUpon>Usufrecuentes.cs</DependentUpon>
