--- a/Semana-5-proyecto-formularios-biblioteca.csproj
+++ b/Semana-5-proyecto-formularios-biblioteca.csproj
@@ -119,11 +119,11 @@
     <Compile Include="Añadir empleados.Designer.cs">
       <DependentUpon>Añadir empleados.cs</DependentUpon>
     </Compile>
-    <Compile Include="Datos.cs">
+    <Compile Include="datosprestamos.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Datos.Designer.cs">
-      <DependentUpon>Datos.cs</DependentUpon>
+    <Compile Include="datosprestamos.Designer.cs">
+      <DependentUpon>datosprestamos.cs</DependentUpon>
     </Compile>
     <Compile Include="Ventana de Ayuda.cs">
       <SubType>Form</SubType>
@@ -232,8 +232,8 @@
     <EmbeddedResource Include="Añadir empleados.resx">
       <DependentUpon>Añadir empleados.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Datos.resx">
-      <DependentUpon>Datos.cs</DependentUpon>
+    <EmbeddedResource Include="datosprestamos.resx">
+      <DependentUpon>datosprestamos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ventana de Ayuda.resx">
       <DependentUpon>Ventana de Ayuda.cs</DependentUpon>
