Acciones para cuidar el medio ambiente

--- a/Semana-5-proyecto-formularios-biblioteca.csproj
+++ b/Semana-5-proyecto-formularios-biblioteca.csproj
@@ -143,6 +143,12 @@
     <Compile Include="fusuarios.Designer.cs">
       <DependentUpon>fusuarios.cs</DependentUpon>
     </Compile>
+    <Compile Include="Medio Ambiente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Medio Ambiente.Designer.cs">
+      <DependentUpon>Medio Ambiente.cs</DependentUpon>
+    </Compile>
     <Compile Include="sistemausuDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -266,6 +272,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="fusuarios.resx">
       <DependentUpon>fusuarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Medio Ambiente.resx">
+      <DependentUpon>Medio Ambiente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ventana de Ayuda.resx">
       <DependentUpon>Ventana de Ayuda.cs</DependentUpon>
