Creacion de formulario registro de usuarios conectado a la base de datos de Mysql, y codigo para el login con Mysql

--- a/App.config
+++ b/App.config
@@ -6,6 +6,9 @@
         <add name="Semana_5_proyecto_formularios_biblioteca.Properties.Settings.sistemausuConnectionString"
             connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\sistemausu.mdb"
             providerName="System.Data.OleDb" />
+        <add name="Semana_5_proyecto_formularios_biblioteca.Properties.Settings.biblioteca1ConnectionString"
+            connectionString="server=localhost;user id=biblioteca1;password=monica9010;database=biblioteca1"
+            providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
